--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,13 @@
         "symfony/framework-bundle": "~2.1",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
-		"knplabs/knp-menu-bundle": "~1.1",
+        "knplabs/knp-menu": "*@dev",
+        "knplabs/knp-menu-bundle": "*@dev",
 		"symfony/routing": "~2.1"       
     },
+	"require-dev": {
+        "pimple/pimple": "1.0.*"
+	},
     "autoload": {
         "psr-0": { 
             "kevintweber\\KtwDatabaseMenuBundle": ""
