--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,13 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/framework-bundle": "~2.1",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "~1.2",
         "knplabs/knp-menu": "2.0.*@dev",
-        "symfony/routing": "~2.1"       
+        "symfony/routing": "~2.1"
     },
     "autoload": {
-        "psr-0": { 
+        "psr-0": {
             "kevintweber\\KtwDatabaseMenuBundle": ""
         }
     },
