--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
         "symfony/framework-bundle": "~2.1",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
-        "knplabs/knp-menu": "2.0.*@dev",
-        "symfony/routing": "~2.1"
+        "knplabs/knp-menu": "~2.0@beta"
     },
     "autoload": {
         "psr-0": {
